@@ -104,6 +104,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 4624) Namespace selection for Special:Whatlinkshere
 * Introduce PageHistoryBeforeList and PageHistoryLineEnding hooks; see docs/hooks.txt
   for more information
+* (bug 9397) Introduce "sp-contributions-footer" and "sp-contributions-footer-anon"
+  messages, shown at the end of Special:Contributions as appropriate for the target
 
 == Bugfixes since 1.9 ==
 * (bug 7292) Fix site statistics when moving pages in/out of content namespaces
